Repaired the console launch system.